# CPPProj

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
src/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_mycpp.cpp  test_snppet.cpp
